# ex_open_directory

./: .gitignore  README.md  mix.exs
lib/: ex_open_directory.ex
native/ex_open_directory/: Cargo.toml  build.rs
native/ex_open_directory/src/: lib.rs
